bug fixed: nav dropdown issue where content was overlapping it-> now a top level element

--- a/public/src/home.less
+++ b/public/src/home.less
@@ -1,6 +1,5 @@
 // began styling for homepage
 .content {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
