--- a/public/style/style.css
+++ b/public/style/style.css
@@ -80,7 +80,6 @@ body {
   background-color: gray;
 }
 .content {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
